# vbinseq

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
data/: out.fq.zst  out.vbq
examples/: index.rs  io.rs  parallel.rs
src/: error.rs  header.rs  index.rs  lib.rs  parallel.rs  reader.rs  writer.rs
