[package]
name = "vbinseq"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "A high efficiency binary format for sequencing data with variable-length records."
authors = ["Noam Teyssier <noam.teyssier@arcinstitute.org>"]
repository = "https://github.com/arcinstitute/vbinseq"
documentation = "https://docs.rs/vbinseq"
categories = ["science::bioinformatics", "encoding", "data-structures"]
keywords = ["bioinformatics", "nucleotide", "sequencing", "genomics", "fastq"]

[dependencies]
anyhow = "1.0.96"
bitnuc = "0.2.10"
byteorder = "1.5.0"
memmap2 = "0.9.5"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "2.0.11"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
clap = { version = "4.5.30", features = ["derive"] }
niffler = "3.0.0"
paraseq = "0.1.2"
parking_lot = "0.12.3"
